appId: com.anonymous.sadamobile
---
- runFlow: login.yaml
- assertVisible: "Live Rooms"
- tapOn: "🔔"
- assertVisible: "Notifications"
